--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-router-dom": "^5.1.8",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.1",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
@@ -29,8 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+    "eject": "react-scripts eject"}
+  ,
   "eslintConfig": {
     "extends": [
       "react-app",
